[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/mario.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/Mario.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.5
height = 4.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=9]
resource_name = "hammer"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stairs"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "stairs_final"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00501049, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "hammer"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "stairs"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "stairs_final"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=27]
states/dead/node = SubResource( 10 )
states/dead/position = Vector2( 250, 37 )
states/hammer/node = SubResource( 11 )
states/hammer/position = Vector2( 689, -72 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 573, 37 )
states/jump/node = SubResource( 13 )
states/jump/position = Vector2( 1077, 37 )
states/stairs/node = SubResource( 14 )
states/stairs/position = Vector2( 357, 195 )
states/stairs_final/node = SubResource( 15 )
states/stairs_final/position = Vector2( 803, 195 )
states/walk/node = SubResource( 16 )
states/walk/position = Vector2( 573, 127 )
transitions = [ "idle", "walk", SubResource( 17 ), "walk", "idle", SubResource( 18 ), "idle", "dead", SubResource( 19 ), "idle", "jump", SubResource( 20 ), "jump", "idle", SubResource( 21 ), "hammer", "idle", SubResource( 22 ), "idle", "hammer", SubResource( 23 ), "stairs", "stairs_final", SubResource( 24 ), "stairs_final", "idle", SubResource( 25 ), "stairs", "idle", SubResource( 26 ), "walk", "stairs", SubResource( 30 ), "jump", "stairs", SubResource( 32 ) ]
start_node = "idle"
end_node = "dead"
graph_offset = Vector2( 66.7139, -96.7251 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 4.125, 6.875 )

[sub_resource type="CapsuleShape2D" id=33]
height = 0.0

[sub_resource type="CircleShape2D" id=34]

[node name="Mario" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 136, 44 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 135, 44 )
texture = ExtResource( 1 )
hframes = 6
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/hammer = SubResource( 9 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/stairs = SubResource( 6 )
anims/stairs_final = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 28 )

[node name="Foots" type="RayCast2D" parent="."]
position = Vector2( 136, 44 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="Hurt_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_box"]
position = Vector2( 135.875, 43.125 )
shape = SubResource( 29 )

[node name="Hit_box" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_box"]
position = Vector2( 135, 43 )
shape = SubResource( 33 )

[node name="Hurt_dead" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_dead"]
position = Vector2( 135, 43 )
shape = SubResource( 34 )

[connection signal="area_entered" from="Hurt_box" to="." method="_on_Hurt_box_area_entered"]
[connection signal="area_exited" from="Hurt_box" to="." method="_on_Hurt_box_area_exited"]
[connection signal="area_entered" from="Hurt_dead" to="." method="_on_Hurt_dead_area_entered"]
